--- a/src/webextension/pages/app.html
+++ b/src/webextension/pages/app.html
@@ -5,6 +5,10 @@
 		<!-- <link rel="stylesheet" href="choose_beast.css"/> -->
 		<script src="/scripts/3rd/polyfill.min.js"></script>
 		<script src="/scripts/3rd/comm/webext.js"></script>
+		<script src="/scripts/3rd/react-with-addons.min.js"></script>
+		<script src="/scripts/3rd/react-dom.min.js"></script>
+		<script src="/scripts/3rd/redux.min.js"></script>
+		<script src="/scripts/3rd/react-redux.min.js"></script>
 		<script src="/scripts/app.js"></script>
 	</head>
 
