--- a/src/webextension/pages/app.html
+++ b/src/webextension/pages/app.html
@@ -2,7 +2,9 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<!-- <link rel="stylesheet" href="choose_beast.css"/> -->
+
+		<link rel="stylesheet" href="/styles/app.css" />
+
 		<script src="/scripts/3rd/polyfill.min.js"></script>
 		<script src="/scripts/3rd/comm/webext.js"></script>
 		<script src="/scripts/3rd/react-with-addons.min.js"></script>
@@ -11,7 +13,6 @@
 		<script src="/scripts/3rd/react-redux.min.js"></script>
 		<script src="/scripts/app.js"></script>
 	</head>
-
 	<body>
 		<div id="root"></div>
 	</body>
