--- a/src/webextension/pages/app.html
+++ b/src/webextension/pages/app.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 
 		<link rel="stylesheet" href="/styles/app.css" />
+		<link rel="stylesheet" href="/styles/3rd/bootstrap.min.css" />
 
 		<script src="/scripts/3rd/polyfill.min.js"></script>
 		<script src="/scripts/3rd/comm/webext.js"></script>
@@ -12,8 +13,9 @@
 		<script src="/scripts/3rd/redux.min.js"></script>
 		<script src="/scripts/3rd/react-redux.min.js"></script>
 		<script src="/scripts/app.js"></script>
+
 	</head>
 	<body>
-		<div id="root"></div>
+		<div id="root" class="container"></div>
 	</body>
 </html>
