--- a/src/webextension/pages/app.html
+++ b/src/webextension/pages/app.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<link rel="icon" href="/images/icon16.png">
 
 		<link rel="stylesheet" href="/styles/app.css" />
-		<link rel="stylesheet" href="/styles/3rd/bootstrap.min.css" />
+		<link rel="stylesheet" href="/styles/3rd/bootstrap{{MINIFPROD}}.css" />
 
-		<script src="/scripts/3rd/polyfill.min.js"></script>
+		<script src="/scripts/3rd/polyfill{{MINIFPROD}}.js"></script>
 		<script src="/scripts/3rd/comm/webext.js"></script>
-		<script src="/scripts/3rd/react-with-addons.min.js"></script>
-		<script src="/scripts/3rd/react-dom.min.js"></script>
-		<script src="/scripts/3rd/redux.min.js"></script>
-		<script src="/scripts/3rd/react-redux.min.js"></script>
+		<script src="/scripts/3rd/react-with-addons{{MINIFPROD}}.js"></script>
+		<script src="/scripts/3rd/react-dom{{MINIFPROD}}.js"></script>
+		<script src="/scripts/3rd/redux{{MINIFPROD}}.js"></script>
+		<script src="/scripts/3rd/react-redux{{MINIFPROD}}.js"></script>
+		<script src="/scripts/3rd/react-router{{MINIFPROD}}.js"></script>
+		<script src="/scripts/3rd/react-history{{MINIFPROD}}.js"></script>
+		<script src="/scripts/common/all.js"></script>
+		<script src="/scripts/common/dom.js"></script>
+		<script src="/scripts/common/dom-react.js"></script>
 		<script src="/scripts/app.js"></script>
 
 	</head>
-	<body>
-		<div id="root" class="container"></div>
-	</body>
+	<body></body>
 </html>
