--- a/src/webextension/pages/app.html
+++ b/src/webextension/pages/app.html
@@ -15,8 +15,10 @@
 		<script src="/scripts/3rd/react-dom{{MINIFPROD}}.js"></script>
 		<script src="/scripts/3rd/redux{{MINIFPROD}}.js"></script>
 		<script src="/scripts/3rd/react-redux{{MINIFPROD}}.js"></script>
+        <script src="/scripts/3rd/history{{MINIFPROD}}.js"></script>
 		<script src="/scripts/3rd/react-router{{MINIFPROD}}.js"></script>
-		<script src="/scripts/3rd/react-history{{MINIFPROD}}.js"></script>
+        <script src="/scripts/3rd/react-history{{MINIFPROD}}.js"></script>
+		<script src="/scripts/3rd/react-router-addons-controlled{{MINIFPROD}}.js"></script>
 		<script src="/scripts/common/all.js"></script>
 		<script src="/scripts/common/dom.js"></script>
 		<script src="/scripts/common/dom-react.js"></script>
